--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "next": "14.1.0",
+    "framer-motion": "^10.6.0",
+    "i18next": "^23.2.6",
+    "next-i18next": "^14.0.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
@@ -19,5 +23,6 @@
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0"
+    
   }
 }
